# genie

./: .gitignore  BUILD.bazel  Cargo.toml  LICENSE  README.md  WORKSPACE.bazel  build.rs  make-release.sh  mkdocs.yml  package-lock.json
.github/: build.yaml
.github/workflows/: build.yaml  release.yml  security-audit.yaml
doc/: index.md  run-command.md  user_guide.md
examples/: README.md  analyse-project.yaml  code-review.yaml  migrate-sql.yaml
examples/sql/: mysql.sql
openai/: Cargo.toml
openai/src/: lib.rs
src/: client.rs  completion.rs  context.rs  errors.rs  images.rs  main.rs  messages.rs  model.rs  prompt.rs  server.rs  web_socket.rs
src/actions/: chat.rs  code.rs  embedded.rs  images.rs  list_models.rs  mod.rs  server.rs  shell.rs
src/adapters/: github.rs  mod.rs  ollama.rs  openai.rs
src/adaptors/: embedded.rs  mod.rs  ollama.rs  openai.rs
src/context/: mod.rs
src/filesystem/: mod.rs
src/messages/: template.rs
src/run/: file_extensions.rs  files.rs  mod.rs  script.rs  template.rs
static/: index.html  site.css  site.js
