[package]
name = "genie"
version = "0.0.4"
build = "build.rs"
edition = "2021"
authors = ["Graham Brooks<graham@grahambrooks.com>"]
description = "A command line shell for using GenerativeAI tools in the command line"
readme = "README.md"
repository = "https://github.com/grahambrooks/genie"
license = "MIT"

[[bin]]
name = "genie"
path = "src/main.rs"

[dependencies]
ollama-rs = "0.1.6"
hyper = { version = "1.1.0", features = ["full"] }
os_info = "3.7.0"
atty = "0.2.14"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
futures = { version = "0.3.30" }
clap = { version = "4.3.18", features = ["derive"] }
reqwest = { version = "0.11", features = ["stream", "blocking", "json"] }
tera = "1.19.1"
termion = "3.0.0"
mime_guess = { version = "2.0.4", features = [] }
async-openai = "0.19.0"
log = "0.4.20"
async-trait = "0.1.77"
mime = "0.3.17"
tempfile = "3.10.0"
walkdir = "2.4.0"
serde_yaml = "0.9.32"
glob = "0.3.1"