[package]
name = "genie"
version = "0.2.0"
build = "build.rs"
edition = "2021"
authors = ["Graham Brooks<graham@grahambrooks.com>"]
description = "A command line shell for using LLMs tools in the command line"
readme = "README.md"
repository = "https://github.com/grahambrooks/genie"
homepage = "https://github.com/grahambrooks/genie"
license = "MIT"

[[bin]]
name = "genie"
path = "src/main.rs"

[dependencies]
ollama-rs = "0.2.0"
hyper = { version = "1.1.0", features = ["full"] }
os_info = "3.7.0"
atty = "0.2.14"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
futures = { version = "0.3.30" }
clap = { version = "4.3.18", features = ["derive"] }
reqwest = { version = "0.12.3", features = ["stream", "blocking", "json"] }
tera = "1.19.1"
termion = "4.0.3"
mime_guess = { version = "2.0.4", features = [] }
async-openai = "0.27.2"
log = "0.4.20"
async-trait = "0.1.77"
mime = "0.3.17"
tempfile = "3.10.0"
walkdir = "2.4.0"
serde_yaml = "0.9.32"
glob = "0.3.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
# A GitHub repo to push Homebrew formulas to
tap = "grahambrooks/homebrew-genie"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
