[package]
name = "openai"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1.0.68", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.28.2", features = ["full"] }
futures = { version = "0.3.28" }
reqwest = { version = "0.11", features = ["stream", "blocking", "json"] }
